# movies-api

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  database.sqlite  docker-compose.yaml  pyproject.toml  requirements.txt  vercel.json
.code_quality/: .flake8  .pylintrc  bandit.yaml  mypy.ini
app/: auth.py  main.py
app/config/: database.py  hashing.py  oauth2.py  settings.py
app/middlewares/: error_handler.py
app/models/: movie.py  user.py
app/routers/: JWToken.py
app/routers/v1/: auth.py  models.py  movies.py  users.py  utils.py
app/routers/v1/mocks/: movies.json
app/schemas/: movie.py  token.py  user.py
app/services/: movie.py  user.py
